# RAJA-project-template

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  example.cpp
